# Graphing-SFML

./: .gitignore  CMakeLists.template.txt  README.md
Functions/: CMakeLists.txt
Functions/include/: app.hpp  drawUtil.hpp  userInteraction.hpp
Functions/include/Objects/: TextBox.hpp
Functions/src/: app.cpp  drawUtil.cpp  main.cpp  userInteraction.cpp
Functions/src/Objects/: TextBox.cpp
reference/chaos-equations/: CMakeLists.txt  Main.cpp  resource.h
reference/conics/: CMakeLists.txt  README.md
reference/conics/include/: DrawUtil.h  Ellipse.h
reference/conics/src/: DrawUtil.cpp
reference/include/: Animations.h  ConicSolver.h
reference/src/: Animations.cpp  ConicSolver.cpp  Ellipse.cpp  Main.cpp
testing/: CMakeLists.txt
testing/src/: main.cpp
